# otus_cpp_15

./: .travis.yml  CMakeLists.txt  README.md
data/: stars.txt
include/: common_types.h  visualize.h
src/: data_generator.cpp  main.cpp  stars_data_generator.cpp  visualize.cpp
